update landing page

--- a/frontend/src/app/components/landing/landing.component.css
+++ b/frontend/src/app/components/landing/landing.component.css
@@ -1,902 +1,18 @@
 :host {
   width: 100%;
-  background-color: #ECEFFF;
+  background-color: #ecefff;
 }
 
-.section-wrapper {
-  display: flex;
-  justify-content: center;
-}
-
-/* Hero section */
-#hero-card {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  background: linear-gradient(to right, #CFB8FE, #F6BFF7);
-  align-items: center;
-  padding: 20px;
-  gap: 20px;
-}
-
-#hero-text h2 {
-  font-family: montserrat-bold;
-  color: var(--dark-blue);
-}
-
-#hero-pros {
-  margin-top: 20px;
-}
-
-#hero-pros p {
-  margin-bottom: 7px;
-  font-family: nunito-regular;
-}
-
-#hero-btns {
-  display: flex;
-  gap: 30px;
-  margin-top: 30px;
-  align-items: center;
-}
-
-#check-lvl-btn {
-  font-size: 18px;
-  text-decoration: none;
-  color: #000D83;
-  font-family: nunito-regular;
-  font-weight: 600;
-  display: flex;
-  align-items: flex-end;
-  transition: 0.7s;
-  background: none;
+#myBtn {
+  font-size: 30px;
+  display: none;
+  position: fixed;
+  bottom: 70px;
+  right: 10px;
+  background-color: transparent;
+  z-index: 99;
   border: none;
-}
-
-#check-lvl-btn:hover i,
-#check-lvl-btn:active i {
-  transition: 0.7s;
-  transform: translateX(5px);
-}
-
-#hero-img {
-  text-align: center;
-}
-
-#hero-img img {
-  border-radius: 20px;
-  pointer-events: none;
-}
-
-#modal-content {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.modal-choice {
-  padding: 10px;
-  width: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid black;
-  border-radius: 15px;
-  text-align: center;
-  text-decoration: none;
-  background-color: #3540A9;
-  transition: .7s;
-}
-
-.modal-choice:hover {
-  background-color: #5d6add;
-}
-
-.modal-choice p {
-  color: #fff;
-  font-size: 18px;
-  font-family: montserrat-bold;
-  margin: 0;
-}
-
-.modal-choice img {
-  width: 50%;
-  height: auto;
-}
-
-
-/* Carousel section */
-#carousel-wrapper {
-  display: flex;
-  justify-content: center;
-  position: relative;
-}
-
-swiper-container {
-  width: 80%;
-  padding-bottom: 20px;
-}
-
-swiper-slide {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 20px;
-  background-color: #8CAFCE;
-  font-family: nunito-regular;
-  font-size: 20px;
-  height: 268px;
-  box-shadow: var(--shadow);
-  position: relative;
-  margin-top: 20px;
-  height: 83%;
-  margin-bottom: 20px;
-}
-
-swiper-slide span {
-  background: linear-gradient(#FF0000, #990000);
-  font-size: 45px;
-  font-weight: 600;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  color: transparent;
-  position: absolute;
-  top: -13px;
-  right: -2px;
-  transform: rotate(20deg);
-}
-
-swiper-slide img {
-  width: 50px;
-  height: 50px;
-}
-
-swiper-slide h3 {
-  color: #000D83;
-  font-weight: 600;
-}
-
-#control-next,
-#control-prev {
-  background: none;
-  border: none;
-  color: #4953A7;
-  font-size: 40px;
-  position: absolute;
-  top: 40%;
-  z-index: 1000;
+  color: white;
   cursor: pointer;
-  transition: 0.7s;
-}
-
-#control-next:hover,
-#control-prev:hover {
-  color: #7179c0;
-}
-
-#control-prev {
-  left: 5%;
-}
-
-#control-next {
-  right: 5%;
-}
-
-/* about-school section */
-#about-card {
-  width: 90%;
-  gap: 50px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.sub-heading {
-  font-family: montserrat-medium;
-  font-size: 30px;
-  color: #4953A7;
-  margin-bottom: 60px;
-}
-
-#about-text {
-  font-size: 18px;
-  font-family: nunito-regular;
-  background-color: #F1F8FF;
-  border-radius: 20px;
-  padding: 20px;
-  position: relative;
-  max-width: 800px;
-}
-
-#about-img {
-  width: auto;
-  height: auto;
-  border-radius: 0 20px 0 20px;
-  box-shadow: 6px 6px #000D83;
-}
-
-#about-lines {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: auto;
-  height: auto;
-}
-
-.about-background-img {
-  position: absolute;
-  width: 30px;
-  height: 30px;
-  opacity: 45%;
-}
-
-#about-star {
-  transform: rotate(20deg);
-  bottom: 3%;
-  right: 3%;
-}
-
-#about-laptop {
-  transform: rotate(20deg);
-  right: 33%;
-  top: 5%;
-}
-
-#about-languages {
-  transform: rotate(-15deg);
-  bottom: 0;
-  left: 7%;
-}
-
-#about-pros {
-  display: flex;
-  gap: 30px;
-}
-
-.about-paragraph {
-  margin-bottom: 30px;
-}
-
-/* about-teacher section */
-#teacher-card {
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 60px;
-}
-
-#teacher-img {
-  border-radius: 0 20px 0 20px;
-  box-shadow: 6px 6px #000D83;
-}
-
-#teacher-text {
-  font-family: nunito-regular;
-  font-size: 18px;
-  background-color: #fff;
-  border-radius: 20px;
-  padding: 20px;
-  max-width: 730px;
-  height: min-content;
-  box-shadow: var(--shadow);
-}
-
-/* language-test section */
-#lang-wrapper {
-  padding-top: 20px;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-family: nunito-regular;
-  font-size: 18px;
-  background-color: #fff;
-}
-
-#lang-card {
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 60px;
-  position: relative;
-}
-
-#lang-text {
-  text-align: center;
-  background-color: #F2EBFF;
-  padding: 20px;
-  border-radius: 20px;
-  max-width: 700px;
-}
-
-#lang-paragraph {
-  margin-bottom: 30px;
-}
-
-/* school-pros section */
-#pros-card {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.pro-card {
-  background: linear-gradient(to bottom, #8eb2d7, #4953A7);
-  border-radius: 20px;
-  text-align: center;
-  color: #fff;
-  box-shadow: var(--shadow);
-}
-
-.pro-card h4 {
-  font-family: montserrat-medium;
-  letter-spacing: 1px;
-  border-bottom: 1px solid #fff;
-}
-
-.pro-card img {
-  width: 56px;
-  height: auto;
-}
-
-/* FAQ section */
-#faq-card {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.accordion {
-  background-color: var(--purple);
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  outline: none;
-  transition: 0.4s;
-  display: flex;
-  justify-content: space-between;
-  font-family: montserrat-medium;
-  font-size: 18px;
-  border-radius: 20px;
-}
-
-.accordion i {
-  transition: 0.4s;
-}
-
-.faq-active,
-.accordion:hover {
-  background-color: #bb9af9;
-}
-
-.faq-active i {
-  transform: rotate(90deg);
-}
-
-.faq-panel {
-  width: 90%;
-  text-align: center;
-  padding: 0 18px;
-  background-color: white;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.4s ease-out;
-  transition: 0.4s;
-  background-color: #e7dbfe;
-  border-radius: 0 0 10px 10px;
-}
-
-/* Contact section */
-#contact-form-section {
-  padding-left: 5%;
-  padding-right: 5%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 50px;
-  flex-direction: column;
-  font-size: 18px;
-}
-
-#contact-card {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.contact-heading {
-  font-family: montserrat-medium;
-  font-size: 30px;
-  color: #fff;
-}
-
-.error-span {
-  color: red;
-}
-
-form {
-  width: 40%;
-  gap: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-#contact-background {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 40px;
-  border-radius: 20px;
-  position: relative;
-  box-shadow: var(--shadow);
-  background: linear-gradient(to left, #CFB8FE, #F6BFF7);
-}
-
-#contact-heading {
-  margin-bottom: 20px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  border-radius: 25px;
-  background: linear-gradient(to right, #688DE2, #A761FF);
-}
-
-#contact-img {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  height: 60%;
-  width: auto;
-}
-
-#submit-btn {
-  width: 200px;
-  border-radius: 15px;
-  padding: 5px;
-  color: #fff;
-  transition: background 1.7s;
-  background: linear-gradient(to right, #688DE2, #A761FF);
-}
-
-#submit-btn:hover {
-  background: linear-gradient(to right, #688de2c7, #a861ffc1);
-}
-
-#submit-btn i::before {
-  transform: rotate(30deg);
-  transition: .7s;
-}
-
-#submit-btn:hover i::before {
-  translate: 2px -2px 0px;
-}
-
-select {
-  transition: .7s;
-}
-
-/* blog section */
-#blog-wrapper {
-  padding-top: 20px;
-  padding-left: 5%;
-  padding-right: 5%;
-  padding-bottom: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#blog-card {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#blog-content {
-  width: 100%;
-  position: relative;
-}
-
-#blog-background-img {
-  width: 100%;
-  height: auto;
-  border-radius: 20px;
-}
-
-#blog-link {
-  position: absolute;
-  top: 10px;
-  left: 50%;
-  width: max-content;
-  transform: translateX(-50%);
-  padding: 10px;
-  font-size: 30px;
-  color: #fff;
-  border-radius: 10px;
-  font-family: montserrat-medium;
-  background: linear-gradient(0deg, rgba(0, 123, 255, 0.5), rgba(0, 123, 255, 0.5)), linear-gradient(92.54deg, rgb(28, 128, 207) 47.88%, rgb(255, 255, 255) 100.01%);
-  text-decoration: none;
-  transition: .7s;
-}
-
-#blog-link:hover {
-  background: linear-gradient(0deg, rgb(5 101 205 / 50%), rgb(6 91 183 / 50%)), linear-gradient(92.54deg, rgb(24 101 163) 47.88%, rgb(255, 255, 255) 100.01%);
-}
-
-/* socials section */
-#hotline-wrapper {
-  padding-top: 20px;
-  padding-left: 5%;
-  padding-right: 5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-}
-
-#socials-card {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#socials-content {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.contact {
-  position: relative;
-  gap: 30px;
-  border-radius: 15px;
-  padding: 20px;
-  height: min-content;
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  color: #fff;
-  background-color: #8CAFCE;
-}
-
-h4 {
-  font-family: montserrat-bold;
-  text-align: center;
-  border-bottom: 1px solid #fff;
-}
-
-.socials-icons {
-  display: flex;
-  gap: 15px;
-  font-size: 25px;
-}
-
-.social-links {
-  color: #fff;
-  text-decoration: none;
-}
-
-.social-links:hover {
-  color: #dcdbdb;
-}
-
-.socials-background-img {
-  transition: .7s;
-}
-
-.contact-badge {
-  position: absolute;
-  top: -10px;
-  left: -10px;
-  width: 40px;
-  transform: rotate(-20deg);
-}
-
-#scroll-up {
-  position: absolute;
-  bottom: 30px;
-  right: 30px;
-  background: none;
-  border: none;
-  font-size: 45px;
-  color: #000d83;
-  transition: .7s;
-}
-
-#scroll-up:hover {
-  color: #1424b2;
-}
-
-/* Media queries for hero-section */
-@media screen and (max-width: 1160px) {
-  #hero-card {
-    width: 100%;
-    padding: 15px;
-  }
-
-  #hero-img img {
-    width: 100%;
-    height: auto;
-  }
-
-  #hero-text {
-    text-align: center;
-  }
-
-  #hero-btns {
-    justify-content: center;
-    gap: 15px;
-  }
-}
-
-@media screen and (max-width: 783px) {
-  #hero-card {
-    flex-direction: column-reverse;
-  }
-
-  #hero-img img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media screen and (max-width: 437px) {
-  #modal-content {
-    flex-direction: column;
-    gap: 10px
-  }
-}
-
-@media screen and (max-width: 400px) {
-  #hero-btns {
-    flex-direction: column;
-  }
-}
-
-/* Media queries for about-section */
-@media only screen and (max-width: 1300px) {
-  #about-img {
-    width: 95%;
-    height: 95%;
-  }
-}
-
-@media only screen and (max-width: 1200px) {
-  #about-card {
-    flex-direction: column-reverse;
-    gap: 30px;
-  }
-
-  #about-img {
-    width: 50%;
-    height: auto;
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  #about-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #about-laptop {
-    display: none;
-  }
-
-  #about-pros {
-    flex-direction: column;
-    justify-content: center;
-    gap: 0;
-
-  }
-
-  about-paragraph {
-    text-align: center;
-  }
-}
-
-@media only screen and (max-width: 620px) {
-  #about-lines {
-    display: none;
-  }
-}
-
-
-/* Media queries for about-teacher-section */
-@media only screen and (max-width: 1100px) {
-  #teacher-card {
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-  }
-
-  #teacher-content {
-    text-align: center;
-  }
-
-  #teacher-text {
-    text-align: center;
-    max-width: 500px;
-    font-size: 15px;
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  #teacher-img {
-    width: 65%;
-    height: auto;
-  }
-}
-
-/* Media queries for language-test-section */
-@media screen and (max-width: 1550px) {
-  #lang-card {
-    gap: 20px;
-    margin-top: 20px;
-    justify-content: center;
-  }
-
-  #lang-img {
-    width: 40%;
-    height: auto;
-  }
-}
-
-@media screen and (max-width: 1100px) {
-  #lang-card {
-    flex-direction: column;
-  }
-
-  #lang-img {
-    width: 70%;
-  }
-}
-
-/* Media queries for FAQ section */
-@media screen and (min-width: 992px) {
-  .accordion {
-    width: 65%;
-  }
-
-  .faq-panel {
-    width: 55%;
-  }
-}
-
-
-/* Media queries for contact section */
-@media screen and (min-width: 1500px) {
-  form {
-    width: 40%;
-  }
-
-  #contact-heading {
-    width: 70%;
-  }
-
-  #contact-background {
-    width: 70%;
-  }
-}
-
-@media screen and (max-width: 880px) {
-  #contact-img {
-    height: 45%;
-  }
-
-  form {
-    width: 60%;
-  }
-}
-
-@media screen and (max-width: 815px) {
-  #contact-form-section {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  #contact-background {
-    padding: 10px;
-    align-items: center;
-  }
-
-  form {
-    width: 100%;
-  }
-
-  #contact-img {
-    display: none;
-  }
-
-  #contact-heading {
-    width: 100%;
-    padding: 15px 10px 15px 10px;
-  }
-
-  .contact-heading {
-    text-align: center;
-    font-size: 18px;
-  }
-}
-
-/* Media queries for blog section */
-@media screen and (max-width: 1080px) {
-  #blog-link {
-    font-size: 20px;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  #blog-link {
-    font-size: 15px;
-    padding: 5px;
-    right: 5px;
-  }
-
-  #blog-wrapper {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  #blog-card {
-    width: 100%;
-  }
-}
-
-/* Media queries for socials section */
-@media screen and (max-width: 1171px) {
-  .socials-background-img {
-    width: auto;
-    height: 200px;
-  }
-}
-
-@media screen and (max-width: 879px) {
-  .socials-background-img {
-    width: auto;
-    height: 150px;
-  }
-
-  #scroll-up {
-    font-size: 30px;
-    right: 5px;
-    bottom: 5px;
-  }
-}
-
-@media screen and (max-width: 743px) {
-  .socials-background-img {
-    display: none;
-  }
-
-  #socials-content {
-    justify-content: center;
-  }
-}
-
-@media screen and (max-width: 381px) {
-  #scroll-up {
-    display: none;
-  }
+  border-radius: 4px;
 }
