--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: nunito-regular;
+  font-family: nunito;
   src: url(assets/fonts/Nunito.ttf) format('trueType');
 }
 
@@ -13,30 +13,38 @@
   src: url(assets/fonts/Montserrat-Bold.ttf) format(trueType);
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
 
 * {
   padding: 0;
   margin: 0;
-  font-family: nunito-regular;
+  font-family: montserrat-medium;
 }
 
 
 :root {
   --dark-blue: #000d83;
   --light-blue: #f1f8ff;
+  --new-blue: #727cf5;
   --purple: #dbcafc;
+  --orange: #e87481;
   --shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);
 }
 
 .cta {
+  border: none;
   border-radius: 7px;
   font-family: montserrat-bold;
   font-size: 20px;
   transition: 0.5s ease;
   background-color: var(--dark-blue);
-  color: #fff;
+  color: #f3f3f3;
   padding: 13px;
   text-decoration: none;
+  box-shadow: 0 10px 20px rgba(78,132,253,.4)
 }
 
 .cta:hover {
@@ -45,6 +53,21 @@
 
 .cta:disabled {
   background-color: #71748f;
+}
+
+body.modal-open section {
+  -webkit-filter: blur(4px);
+  -moz-filter: blur(4px);
+  -o-filter: blur(4px);
+  -ms-filter: blur(4px);
+  filter: blur(4px);
+}
+
+.sub-heading {
+  font-family: montserrat-bold;
+  font-size: 30px;
+  color: var(--dark-blue);
+  margin-bottom: 20px;
 }
 
 .iti {
@@ -98,4 +121,10 @@ ngx-intl-tel-input.is-invalid>.iti>input:focus {
   opacity: .6;
   border-color: red;
   border-width: 4px 0 0;
+}
+
+
+.section-wrapper {
+  display: flex;
+  justify-content: center;
 }
