--- a/frontend/src/app/components/landing/courses/courses.component.css
+++ b/frontend/src/app/components/landing/courses/courses.component.css
@@ -17,7 +17,7 @@ swiper-container {
 swiper-slide {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   border-radius: 15px;
   background-color: #f1f6ff;
   font-family: montserrat-medium;
