--- a/frontend/src/app/components/profile/profile.component.css
+++ b/frontend/src/app/components/profile/profile.component.css
@@ -57,11 +57,15 @@ mat-drawer {
 }
 
 fa-icon {
-  color: var(--dark-blue);
+  color: #000;
+}
+
+#search-form {
+  width: 20%;
 }
 
 #search-input {
-  width: 250px;
+  width: 100%;
   box-sizing: border-box;
   border: 2px solid var(--new-blue);
   border-radius: 15px;
@@ -82,13 +86,13 @@ fa-icon {
   display: flex;
   gap: 25px;
   padding: 10px;
-  width: 300px;
-  height: 100px;
+  width: 299px;
+  height: 99px;
   border-radius: 15px;
   background-color: #fff;
   background-position: bottom center;
   background-repeat: no-repeat;
-  background-size: 100% auto;
+  background-size: contain;
   box-shadow: var(--shadow);
   cursor: pointer;
 }
@@ -113,4 +117,57 @@ full-calendar {
   background-color: #fff;
   border-radius: 15px !important;
   box-shadow: var(--shadow);
+}
+
+#avatar-and-greeting {
+  display: flex;
+  align-items: start;
+  gap: 10px;
+}
+
+#main-content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+
+#card-container {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+  align-items: center;
+}
+
+#wrapper {
+  width: 75%;
+}
+
+@media screen and (max-width: 1310px) {
+  #avatar-and-greeting {
+    justify-content: center;
+  }
+  #main-content {
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+  #search-form {
+    width: 30%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #card-container {
+    flex-direction: column;
+    width: 100%;
+  }
+  .info-card {
+    width: 85%;
+  }
+  #wrapper {
+    width: 95%;
+  }
+  #search-form {
+    width: 40%;
+  }
 }
