--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: nunito;
-  src: url(assets/fonts/Nunito.ttf) format('trueType');
+  src: url(assets/fonts/Nunito.ttf) format("trueType");
 }
 
 @font-face {
@@ -24,7 +24,6 @@ body {
   font-family: montserrat-medium;
 }
 
-
 :root {
   --dark-blue: #000d83;
   --light-blue: #f1f8ff;
@@ -44,11 +43,11 @@ body {
   color: #f3f3f3;
   padding: 13px;
   text-decoration: none;
-  box-shadow: 0 10px 20px rgba(78,132,253,.4)
+  box-shadow: 0 10px 20px rgba(78, 132, 253, 0.4);
 }
 
 .cta:hover {
-  background-color: #3540A9;
+  background-color: #3540a9;
 }
 
 .cta:disabled {
@@ -74,27 +73,28 @@ body.modal-open section {
   width: 100%;
 }
 
-ngx-intl-tel-input.is-invalid>.iti {
+ngx-intl-tel-input.is-invalid > .iti {
   border: 1px solid red;
   border-radius: 7px;
 }
 
-ngx-intl-tel-input.is-invalid>.iti>input:focus {
+ngx-intl-tel-input.is-invalid > .iti > input:focus {
   border-color: var(--bs-form-invalid-border-color);
   box-shadow: 0 0 0 0.25rem rgba(var(--bs-danger-rgb), 0.25);
 }
 
 .iti .dropdown-menu.country-dropdown {
-  font-size: 15px
+  font-size: 15px;
 }
 
 .avatar {
   vertical-align: middle;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   border: 3px solid #c0a5f6;
   cursor: pointer;
+  object-fit: cover;
 }
 
 .fc-col-header-cell-cushion {
@@ -103,9 +103,9 @@ ngx-intl-tel-input.is-invalid>.iti>input:focus {
   text-decoration: none;
 }
 
-.fc .fc-button-group>.fc-button.fc-button-active,
-.fc .fc-button-group>.fc-button:active,
-.fc .fc-button-group>.fc-button:focus {
+.fc .fc-button-group > .fc-button.fc-button-active,
+.fc .fc-button-group > .fc-button:active,
+.fc .fc-button-group > .fc-button:focus {
   background-color: rgb(14, 82, 14);
 }
 
@@ -118,11 +118,10 @@ ngx-intl-tel-input.is-invalid>.iti>input:focus {
 }
 
 .fc .fc-timegrid-now-indicator-line {
-  opacity: .6;
+  opacity: 0.6;
   border-color: red;
   border-width: 4px 0 0;
 }
-
 
 .section-wrapper {
   display: flex;
