change styles in user-settings page

--- a/frontend/src/app/components/profile/user-settings/user-settings.component.html
+++ b/frontend/src/app/components/profile/user-settings/user-settings.component.html
@@ -10,7 +10,7 @@
     alt=""
   />
   <div id="avatar-actions">
-    <button (click)="deletePhoto()" class="outline-btn">
+    <button (click)="deletePhoto()" id="delete-btn">
       <fa-icon [icon]="icons.delete"></fa-icon>
       &nbsp; Видалити
     </button>
