--- a/frontend/src/app/components/profile/user-settings/user-settings.component.css
+++ b/frontend/src/app/components/profile/user-settings/user-settings.component.css
@@ -30,7 +30,8 @@
 }
 
 .outline-btn,
-.filled-btn {
+.filled-btn,
+#delete-btn {
   border: 2px solid #6366f1;
   border-radius: 8px;
   padding: 5px;
@@ -51,6 +52,15 @@
 }
 .filled-btn:hover {
   background-color: #4245ed;
+}
+
+#delete-btn {
+  border: 1px solid red !important;
+  background-color: #fff;
+  color: red !important;
+}
+#delete-btn:hover {
+  background-color: rgb(255, 217, 217);
 }
 
 #data-setting form {
