--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg w-100" id="nav-layer">
   <!-- The largest navbar -->
   <div class="collapse navbar-collapse">
-    <div class="d-flex justify-content-around w-100">
+    <div class="d-flex justify-content-between w-100 px-4 py-2">
       <a routerLink="">
         <img id="nav-logo" src="../../../assets/navigation/logo.png" />
       </a>
@@ -67,9 +67,10 @@
             [src]="photoUrl"
             data-bs-toggle="dropdown"
             alt="Avatar"
+            style="margin-left: 15px;"
             class="avatar"
           />
-          <ul class="dropdown-menu dropdown-menu-start">
+          <ul class="dropdown-menu dropdown-menu-end">
             <li>
               <a class="dropdown-item" href="/home">
                 <fa-icon [icon]="icons.profile"></fa-icon>
